Вывод полезной информации в режиме DRY RUN
